--- a/languages/bloglovin-widget-en_GB.po
+++ b/languages/bloglovin-widget-en_GB.po
@@ -2,10 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bloglovin Widget\n"
 "POT-Creation-Date: 2015-05-09 22:09-0000\n"
-"PO-Revision-Date: 2015-05-09 22:09-0000\n"
+"PO-Revision-Date: 2015-05-09 22:11-0000\n"
 "Last-Translator: \n"
 "Language-Team: pipdig <hello@pipdig.co>\n"
-"Language: en\n"
+"Language: en_GB\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -105,6 +105,8 @@ msgid ""
 "Select a style from below, or choose your own colors in the <em>Bloglovin' "
 "Widget</em> section of the <a href='%s'>Customizer</a>."
 msgstr ""
+"Select a style from below, or choose your own colors in the <em>Bloglovin' "
+"Widget</em> section of the <a href='%s'>Customiser</a>."
 
 #: ../bloglovin-widget.php:298
 msgid "Widget style:"
@@ -122,11 +124,11 @@ msgstr ""
 
 #: ../customizer.php:27
 msgid "Background color"
-msgstr ""
+msgstr "Background colour"
 
 #: ../customizer.php:44
 msgid "Text color"
-msgstr ""
+msgstr "Text colour"
 
 #: ../customizer.php:60
 msgid "Widget Icon"
