Updated FR text
git-svn-id: https://plugins.svn.wordpress.org/bloglovin-widget/trunk@1175093 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/languages/bloglovin-widget-fr_FR.po
+++ b/languages/bloglovin-widget-fr_FR.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bloglovin Widget\n"
 "POT-Creation-Date: 2015-05-23 23:41-0000\n"
-"PO-Revision-Date: 2015-05-23 23:41-0000\n"
+"PO-Revision-Date: 2015-06-05 09:50-0000\n"
 "Last-Translator: \n"
 "Language-Team: pipdig <hello@pipdig.co>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8\n"
+"X-Generator: Poedit 1.7.6\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Poedit-KeywordsList: __;_e\n"
@@ -45,6 +45,9 @@ msgid ""
 "plugin. <a href='http://www.pipdig.co/contact' target='_blank'>Contact us</"
 "a> for details."
 msgstr ""
+"Nous voudrions remercier Alexia pour avoir traduit ce plugin en Français. "
+"Faites un tour sur son blog <a href='http://www.thebeautynotebook.com' "
+"target='_blank'>thebeautynotebook.com</a>!"
 
 #: ../bloglovin-widget.php:134
 msgid "Total count:"
@@ -78,7 +81,7 @@ msgstr ""
 
 #: ../bloglovin-widget.php:145
 msgid "Looking for a more professional WordPress theme?"
-msgstr ""
+msgstr "À la recherche d’un thème plus professionnel?"
 
 #: ../bloglovin-widget.php:146
 msgid ""
@@ -87,6 +90,10 @@ msgid ""
 "utm_source=wordpress&utm_medium=bloglovin&utm_campaign=bloglovin' "
 "target='_blank'>www.pipdig.co</a> by using coupon code 'nextlevel'."
 msgstr ""
+"Cliquez ici pour voir notre gamme complète de themes <a href='http://www."
+"pipdig.co/products/premade-wordpress-themes/?"
+"utm_source=wordpress&utm_medium=bloglovin&utm_campaign=bloglovin' "
+"target='_blank'>www.pipdig.co</a>."
 
 #: ../bloglovin-widget.php:200
 msgid "Display your Bloglovin' follower count."
